# heurist-agent-framework

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  decorators.py  docker-compose.dev.yml  docker-compose.yml  main.py  main_mcp.py  main_twitter.py  mesh_api.py  pyproject.toml  requirements.txt
.docker/: deploy.sh  entrypoint.sh  env-setup.sh  requirements_checker.py  supervisord.conf
.github/scripts/: requirements.txt  update_mesh_metadata.py
.github/workflows/: deploy.yml  update-mesh-metadata.yml
agents/: README.md  core_agent.py  core_agent_refactor.py  research_agent.py
agents/tools/: default_tool_box.py  tool_box.py
core/: README.md  imgen.py  llm.py  pyproject.toml  requirements.txt  setup.py  videogen.py
core/clients/: mcp_client.py  search_client.py
core/clients/search/: duckduckgo_client.py  firecrawl_client.py
core/components/: llm_provider.py  media_handler.py
core/examples/: basic_calls.py  deep_research.py  mcp_call.py  video_generation.py
core/workflows/: chain_of_thought.py  deep_research.py
examples/: multi_provider_search.py  test_mcp_client.py  test_videogen.py
heurist-mesh-client/: README.md  pyproject.toml
heurist-mesh-client/examples/: monitor_agents.py  test_agents.py  test_inputs.json
heurist-mesh-client/heurist_mesh_client/: client.py
interfaces/: api.py  discord.py  farcaster_post.py  farcaster_reply.py  telegram.py  twitter_post.py  twitter_reply.py
mesh/: README.md  __init__.py  aave_agent.py  allora_price_prediction_agent.py  bitquery_solana_token_info_agent.py  coingecko_token_info_agent.py  context_agent.py  elfa_twitter_intelligence_agent.py  funding_rate_agent.py  goplus_analysis_agent.py  masa_twitter_search_agent.py  mesh_agent.py  mesh_api.py  mesh_manager.py  moni_twitter_insight_agent.py  pumpfun_token_agent.py  pyproject.toml  requirements.txt  sol_wallet_agent.py  space_and_time_agent.py  tokenmetrics_agent.py  truth_social_agent.py  twitter_profile_agent.py  zkignite_analyst_agent.py
mesh/agents/: aave_agent.py  aixbt_project_info_agent.py  allora_price_prediction_agent.py  arbus_agent.py  arbus_ai_agent.py  arkham_intelligence_agent.py  bitquery_solana_token_info_agent.py  carv_onchain_data_agent.py  coingecko_token_info_agent.py  composable_echo_agent.py  cookie_project_info_agent.py  deep_research_agent.py  dexscreener_token_info_agent.py  duckduckgo_search_agent.py  echo_agent.py  elfa_twitter_intelligence_agent.py  etherscan_agent.py  evm_token_info_agent.py  exa_search_agent.py  firecrawl_search_agent.py  funding_rate_agent.py  goplus_analysis_agent.py  lets_bonk_token_info_agent.py  masa_twitter_search_agent.py  memory_agent.py  metasleuth_sol_token_wallet_cluster_agent.py  mindai_kol_agent.py  moni_twitter_insight_agent.py  pond_wallet_analysis_agent.py  pumpfun_token_agent.py  sol_wallet_agent.py  space_and_time_agent.py  tokenmetrics_agent.py  truth_social_agent.py  twitter_info_agent.py  twitter_profile_agent.py  unifai_meteora_info_agent.py  unifai_token_analysis_agent.py  unifai_web3_news_agent.py  zerion_wallet_analysis_agent.py  (+1 more)
mesh/tests/: aave_agent.py  aave_agent_example.yaml  aixbt_project_info_agent.py  aixbt_project_info_agent_results.yaml  allora_price_prediction_agent.py  allora_price_prediction_agent_example.yaml  arbus_ai_agent.py  arbus_ai_agent_example.yaml  arkham_intelligence_agent.py  arkham_intelligence_agent_results.yaml  bitquery_sol_token_info_agent.py  bitquery_sol_token_info_agent_example.yaml  carv_onchain_data_agent.py  carv_onchain_data_agent_example.yaml  coingecko_token_info_agent.py  coingecko_token_info_agent_example.yaml  cookie_project_info_agent.py  cookie_project_info_agent_results.yaml  deep_research_agent.py  deep_research_agent_example.yaml  dexscreener_token_info_agent.py  dexscreener_token_info_agent_example.yaml  duckduckgo_search_agent.py  duckduckgo_search_agent_example.yaml  elfa_twitter_intelligence_agent.py  elfa_twitter_intelligence_agent_example.yaml  etherscan_agent.py  etherscan_agent_example.yaml  evm_token_info_agent.py  evm_token_info_agent_example.yaml  exa_search_agent.py  exa_search_agent_example.yaml  firecrawl_search_agent.py  firecrawl_search_agent_example.yaml  funding_rate_agent.py  funding_rate_agent_example.yaml  goplus_analysis_agent.py  goplus_analysis_agent_example.yaml  lets_bonk_token_info_agent.py  lets_bonk_token_info_agent_example.yaml  (+40 more)
