[project]
name = "heurist-mesh-client"
requires-python = ">=3.11"
version = "0.1.2"
description = "Python client for Heurist Mesh API"
authors = []
dependencies = [
    "httpx==0.25.0",
    "pydantic==2.11.4",
    "python-dotenv==1.0.0",
    "click==8.0.0",
    "rich==13.0.0",
    "pyyaml==6.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==7.0.0",
    "black==23.0.0",
    "ruff==0.1.0"
]
